# admin-website-by-jacob

./: .gitignore  LICENSE  Makefile  MiniCRM_Technical_Spec.docx  README.md  cấu-trúc-thư-mục.md  docker-compose.prod.yml  fe-error-analysis.md  frontend-error.md  gop-y-fe-02.md  gop-y-fe.md  mini-crm-spec-grpc.docx  mô-tả-hệ-thống.md  seed-data.md  skill-01.md  sql-schema.md  đặc-tả-hệ-thống.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/protos/: campaign.proto  team.proto
backend/scripts/: generate_proto.bat  seed_data.py  test_grpc.py
backend/src/admin_crm/: __init__.py  main.py
backend/src/admin_crm/application/services/: campaign_service.py  role_service.py  sale_service.py  team_service.py  user_service.py
backend/src/admin_crm/config/: __init__.py  database.py  settings.py
backend/src/admin_crm/db/migrations/: env.py  run_migrations.py
backend/src/admin_crm/db/migrations/versions/: .gitkeep
backend/src/admin_crm/db/models/: __init__.py  activity_log.py  base.py  campaign.py  role.py  sale.py  team.py  user.py
backend/src/admin_crm/db/repositories/: __init__.py  activity_log_repository.py  base.py  campaign_repository.py  role_repository.py  sale_repository.py  team_repository.py  user_repository.py
backend/src/admin_crm/infrastructure/: grpc_server.py
backend/src/admin_crm/infrastructure/interceptors/: __init__.py  auth_interceptor.py  logging_interceptor.py  rbac_interceptor.py
backend/src/admin_crm/utils/: __init__.py  jwt.py  logger.py  password.py
docker/: docker-compose.yml
(+46 files in other folders)
